[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twl"
version = "0.1.0"
description = "TWiLL CLI - plugin structure analysis, validation, and visualization"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
full = [
    "tiktoken",
    "rich",
]
mcp = [
    "fastmcp>=3.0",
]

[project.scripts]
twl = "twl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = false

[[tool.mypy.overrides]]
module = "twl.autopilot.mergegate_ops"
disallow_untyped_defs = true
